--- a/source/less/product-show.less
+++ b/source/less/product-show.less
@@ -24,6 +24,14 @@
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    width: 170px;
+    margin-top: 83px;
+    margin-left: 74px;
+  }
 }
 .product-show p {
   margin: 0;
@@ -33,4 +41,14 @@
   text-align: center;
   font-size: 12px;
   line-height: 16px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 16px;
+    width: 140px;
+    margin-top: 26px;
+    margin-left: 74px;
+    outline: 1px solid red;
+    margin-bottom: 90px;
+  }
 }
