--- a/source/less/product.less
+++ b/source/less/product.less
@@ -78,6 +78,36 @@
   }
 }
 
+@media (min-width: @desktop-width) {
+  .product__image--pro-chicken500 {
+    width: 245px;
+    height: 172px;
+  }
+  .product__image--pro-chicken1000 {
+    width: 245px;
+    height: 208px;
+  }
+  .product__image--pro-fish500 {
+    width: 245px;
+    height: 174px;
+  }
+  .product__image--pro-fish1000 {
+    width: 245px;
+    height: 208px;
+  }
+  .product__image--slim-buckwheat500 {
+    width: 245px;
+    height: 174px;
+  }
+  .product__image--slim-buckwheat1000 {
+    width: 245px;
+    height: 208px;
+  }
+  .product__image--slim-rice500 {
+    width: 245px;
+    height: 174px;
+  }
+}
 
 .product h3 {
   margin: 0;
@@ -100,6 +130,9 @@
     margin-left: 99px;
 
     text-align: center;
+  }
+  @media (min-width: @desktop-width) {
+    margin-left: 57px;
   }
 }
 .product__table {
