--- a/source/less/additional.less
+++ b/source/less/additional.less
@@ -1,21 +1,18 @@
 .additional {
   min-height: 967px;
   outline: 1px solid red;
-}
-@media (min-width: @tablet-width) {
-  .additional {
-  min-height: 1085px;
+
+  @media (min-width: @tablet-width) {
+    min-height: 1085px;
   }
-}
-@media (min-width: @desktop-width) {
-  .additional {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  align-content: flex-start;
-  justify-content: space-between;
-  min-height: 565px;
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: space-between;
+    min-height: 565px;
   }
 }
 .additional h2 {
@@ -29,24 +26,22 @@
   line-height: 24px;
   font-weight: 400;
   outline: 1px solid blue;
-}
-@media (min-width: @tablet-width) {
-  .additional h2 {
-  margin: 0;
-  padding: 0;
 
-  font-size: 36px;
-  line-height: 36px;
-  margin-top: 68px;
-  margin-left: 37px;
-  margin-bottom: 80px;
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    padding: 0;
+
+    font-size: 36px;
+    line-height: 36px;
+    margin-top: 68px;
+    margin-left: 37px;
+    margin-bottom: 80px;
   }
-}
-@media (min-width: @desktop-width) {
-  .additional h2 {
-  margin-top: 76px;
-  margin-left: 0;
-  width: 100%;
+
+  @media (min-width: @desktop-width) {
+    margin-top: 76px;
+    margin-left: 0;
+    width: 100%;
   }
 }
 .additional__list {
@@ -56,17 +51,15 @@
   display: flex;
   flex-direction: column;
   margin: 0 20px;
-}
-@media (min-width: @tablet-width) {
-  .additional__list {
-  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
   }
-}
-@media (min-width: @desktop-width) {
-  .additional__list {
-  width: 895px;
-  height: 288px;
-  margin: 0;
+
+  @media (min-width: @desktop-width) {
+    width: 895px;
+    height: 288px;
+    margin: 0;
   }
 }
 .additional__gift {
@@ -82,21 +75,19 @@
   margin: 0 auto;
   margin-top: 40px;
   outline: 1px solid red;
-}
-@media (min-width: @tablet-width) {
-  .additional__gift {
-  width: 708px;
-  height: 200px;
-  background-image: url("../img/gift-photo-tablet@1x.jpg");
-  margin-top: 70px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+    height: 200px;
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
+    margin-top: 70px;
   }
-}
-@media (min-width: @desktop-width) {
-  .additional__gift {
-  width: 245px;
-  height: 289px;
-  background-image: url("../img/gift-photo-desktop@1x.jpg");
-  margin: 0;
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
+    height: 289px;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
+    margin: 0;
   }
 }
 
@@ -110,4 +101,29 @@
   background-image: url("../img/icon-gift.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+
+  @media (min-width: @tablet-width) {
+    top: 65px;
+    left: 90px;
+  }
 }
+
+.additional__gift p {
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    width: 134px;
+    height: 100px;
+    font-size: 16px;
+    line-height: 20px;
+    top: 55px;
+    left: 423px;
+
+    outline: 1px solid red;
+  }
+  @media (min-width: @desktop-width) {
+    text-align: center;
+    top: 170px;
+    left: 42px;
+  }
+}
+
