--- a/source/less/cat.less
+++ b/source/less/cat.less
@@ -1,38 +1,59 @@
 .cat {
+  margin: 0;
+  padding: 0;
   border: none;
   outline: 1px solid blue;
   width: 320px;
-  height: 190px;
+  min-height: 190px;
   margin: 0 auto;
-  margin-top: 35px;
-  box-sizing: border-box;
-  input {
-    margin: 0;
-    padding: 0;
-    height: 45px;
-    box-sizing: border-box;
-    margin-bottom: 14px;
-    }
-  label {
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: uppercase;
-  margin-right: 18px;
-  display: inline-block;
-  }
-}
-@media (min-width: @tablet-width) {
-  .cat {
+
+
+  @media (min-width: @tablet-width) {
     width: 710px;
     margin-top: 65px;
     height: 195px;
   }
-}
-@media (min-width: @desktop-width) {
-  .cat {
-  width: 570px;
-  margin-left: 0;
+  @media (min-width: @desktop-width) {
+    width: 570px;
+    margin-left: 0;
   }
+}
+
+.cat__wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  outline: 3px solid green;
+  margin-top: 39px;
+  margin-bottom: 14px;
+}
+
+.cat__wrapper input {
+  margin: 0;
+  padding: 0;
+  height: 45px;
+
+
+  outline: 1px solid red;
+  margin-left: 16px;
+  min-width: 172px;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  font-family: "Oswald";
+  padding-left: 12px;
+  box-sizing: border-box;
+  flex-grow: 1;
+
+}
+.cat__wrapper label {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  margin-top: 12px;
+  margin-left: 19px;
+  outline: 1px solid red;
+  margin-bottom: 25px;
 }
 
 
