--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -3,36 +3,48 @@
   border: none;
   outline: 1px solid red;
   position: relative;
-}
-@media (min-width: @tablet-width) {
-  .comment {
+
+  @media (min-width: @tablet-width) {
   height: 335px;
   }
 }
-legend {
+.comment__legend {
   font-size: 24px;
   line-height: 24px;
-  margin-bottom: 28px;
   position: absolute;
-  color: green;
+  max-width: 222px;
+  padding-right: 21px;
+  padding-left: 20px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+
+  outline: 1px solid red;
+  top: 30px;
+  left: 0px;
+  z-index: 5;
+}
+.comment::before {
+  content: "";
+  position: absolute;
+  top: 43px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: @bg-green;
 }
 .comment__container {
   width: 275px;
   height: 147px;
   margin: 0 auto;
   margin-top: 80px;
-}
-@media (min-width: @tablet-width) {
-  .comment__container {
-  width: 630px;
-  height: 170px;
-  margin-top: 170px;
-  }
-}
-@media (min-width: @desktop-width) {
-  .comment__container {
-  width: 1220px;
 
+  @media (min-width: @tablet-width) {
+    width: 630px;
+    height: 170px;
+    margin-top: 170px;
+  }
+  @media (min-width: @desktop-width) {
+    width: 1220px;
   }
 }
 textarea {
@@ -42,6 +54,9 @@ textarea {
   line-height: 18px;
   font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
+  padding-top: 14px;
+  padding-left: 10px;
+  box-sizing: border-box;
 }
 
 
