--- a/source/less/form-programs.less
+++ b/source/less/form-programs.less
@@ -5,24 +5,16 @@
   margin: 0 auto;
   height: 157px;
   box-sizing: border-box;
-  label {
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 73px;
+    width: 630px;
+    height: 194px;
   }
-}
-@media (min-width: @tablet-width) {
-  .form-programs {
-  margin-top: 73px;
-  width: 630px;
-  height: 194px;
-  }
-}
-@media (min-width: @desktop-width) {
-  .form-programs {
-  width: 570px;
-  margin-top: 65px;
-  margin-right: 0;
+  @media (min-width: @desktop-width) {
+    width: 570px;
+    margin-top: 65px;
+    margin-right: 0;
   }
 }
 .form-programs__wrapper {
@@ -32,3 +24,35 @@
   border-bottom: 1px solid #ededed;
   min-height: 157px
 }
+.form-programs__label {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+
+  margin-top: 22px;
+  margin-bottom: 3px;
+  margin-left: 54px;
+  position: relative;
+}
+.form-programs__label::before {
+  content: "";
+  position: absolute;
+  top: -8px;
+  left: -47px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid red;
+  background-color: transparent;
+}
+.form-programs__input:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: -37px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: blue;
+}
+
