--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -3,49 +3,103 @@
   border: none;
   outline: 1px solid red;
   position: relative;
-  &__container {
-  margin: 0;
-  padding: 0;
-  width: 280px;
-  height: 102px;
-  outline: 1px solid red;
-  margin: 0 auto;
-  margin-top: 106px;
+
+  @media (min-width: @tablet-width) {
+    height: 300px;
   }
-  legend {
+  @media (min-width: @desktop-width) {
+    height: 215px;
+  }
+}
+.owner__legend {
   font-size: 24px;
   line-height: 24px;
   position: absolute;
+  max-width: 222px;
+  padding-right: 21px;
+  padding-left: 20px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+
+  outline: 1px solid red;
+  top: 30px;
+  left: 0px;
+  z-index: 5;
+}
+.owner::before {
+  content: "";
+  position: absolute;
+  top: 43px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: @bg-green;
+}
+
+.owner__container {
+  margin: 0;
+  padding: 0;
+  width: 280px;
+  min-height: 102px;
+  outline: 1px solid red;
+  margin: 0 auto;
+  margin-top: 106px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 185px;
+    width: 634px;
+    height: 124px;
   }
-  label {
+  @media (min-width: @desktop-width) {
+    margin-top: 175px;
+    width: 1220px;
+    height: 50px;
+  }
+}
+
+.owner__container label {
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  }
-  input {
+  margin-top: 10px;
+  margin-right: 10px;
+  outline: 1px solid tomato;
+  position: relative;
+}
+.owner__container input {
   font-size: 16px;
   line-height: 18px;
+  font-family: "Oswald";
   text-transform: uppercase;
-  height: 45px;
-  }
+  height: 41px;
+  border: 1px solid red;
+  margin-bottom: 13px;
+  flex-grow: 1;
+  padding-left: 15px;
 }
-@media (min-width: @tablet-width) {
-  .owner {
-  height: 300px;
-  }
-  .owner__container {
-  margin-top: 185px;
-  width: 634px;
-  height: 124px;
-  }
+.owner__tel::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 248px;
+  width: 20px;
+  height: 20px;
+  background-image: url("../img/icon-phone.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
-@media (min-width: @desktop-width) {
-  .owner {
-  height: 215px;
-  }
-  .owner__container {
-  margin-top: 175px;
-  width: 1220px;
-  height: 50px;
-  }
+.owner__email::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 248px;
+  width: 17px;
+  height: 13px;
+  background-image: url("../img/icon-mail.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
