--- a/source/less/product-add.less
+++ b/source/less/product-add.less
@@ -3,17 +3,22 @@
   border-bottom: 1px solid #cdcdcd;
   height: 127px;
   outline: 1px solid black;
-}
-@media (min-width: @tablet-width) {
-  .product-add {
-  min-height: 137px;
+
+  @media (min-width: @tablet-width) {
+    min-height: 139px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 27px 37px 26px 37px;
+    box-sizing: border-box;
   }
-}
-@media (min-width: @desktop-width) {
-  .product-add {
-  display: flex;
-  flex-direction: row;
-  min-height: 70px;
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+    min-height: 70px;
+    padding: 15px 0;
+    box-sizing: border-box;
   }
 }
 .product-add h3 {
@@ -26,6 +31,19 @@
   line-height: 16px;
   font-weight: 400;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    margin-top: -2px;
+    margin-left: 2px;
+    margin-bottom: 15px;
+    outline: 1px solid red;
+    width: 300px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-top: 8px;
+  }
 }
 .product-add__table {
   font-size: 14px;
@@ -33,4 +51,21 @@
   outline: 1px solid red;
   margin-bottom: 7px;
   vertical-align: middle;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 17px;
+  }
+}
+.product-add__link {
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  @media (min-width: @desktop-width) {
+    width: 245px;
+    height: 40px;
+  }
 }
