--- a/source/less/product-show.less
+++ b/source/less/product-show.less
@@ -32,6 +32,11 @@
     margin-top: 83px;
     margin-left: 74px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 82px;
+    margin-left: 36px;
+  }
 }
 .product-show p {
   margin: 0;
@@ -50,5 +55,9 @@
     margin-left: 74px;
     outline: 1px solid red;
     margin-bottom: 90px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
