--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -21,11 +21,12 @@
   flex-direction: column;
 
   @media (min-width: @tablet-width) {
-    width: 630px;
-    height: 220px;
+    width: 700px;
+    min-height: 220px;
     margin-top: 150px;
     flex-direction: row;
     flex-wrap: wrap;
+    align-content: flex-start;
   }
   @media (min-width: @desktop-width) {
     width: 1220px;
@@ -47,6 +48,16 @@
   top: 30px;
   left: 0px;
   z-index: 5;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    max-width: 595px;
+    padding-right: 41px;
+    padding-left: 41px;
+    top: 63px;
+    left: 27px;
+  }
 }
 .additionally::before {
   content: "";
@@ -56,6 +67,10 @@
   width: 100%;
   height: 3px;
   background-color: @bg-green;
+
+  @media (min-width: @tablet-width) {
+    top: 85px;
+  }
 }
 
 .additionally label {
@@ -66,7 +81,20 @@
   margin-top: 5px;
   margin-left: 46px;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    outline: 1px solid red;
+    margin-top: 10px;
+    margin-left: 93px;
+    min-width: 254px;
+    margin-bottom: 42px;
+    align-self: flex-start;
+  }
 }
+
+
 .additionally label::before {
   content: "";
   position: absolute;
@@ -75,6 +103,13 @@
   width: 28px;
   height: 29px;
   border: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    width: 39px;
+    height: 39px;
+    top: -10px;
+    left: -59px;
+  }
 }
 .additionally input:checked + label::after {
   content: "";
@@ -87,12 +122,32 @@
   border-bottom: 2px solid red;
   border-left: 2px solid red;
   transform: rotate(-45deg);
+
+  @media (min-width: @tablet-width) {
+    top: 1px;
+    left: -47px;
+  }
 }
 .additionally__button {
   margin-top: 22px;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 38px;
+    width: 283px;
+    height: 52px;
+    font-size: 20px;
+    line-height: 20px;
+    margin-right: 61px;
+  }
 }
 .additionally small {
   text-align: center;
   margin-top: 14px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 16px;
+    margin-top: 34px;
+  }
 }
 
