--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -22,6 +22,16 @@
   top: 30px;
   left: 0px;
   z-index: 5;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    max-width: 595px;
+    padding-right: 41px;
+    padding-left: 41px;
+    top: 64px;
+    left: 27px;
+  }
 }
 .comment::before {
   content: "";
@@ -31,6 +41,10 @@
   width: 100%;
   height: 3px;
   background-color: @bg-green;
+
+  @media (min-width: @tablet-width) {
+    top: 86px;
+  }
 }
 .comment__container {
   width: 275px;
@@ -57,6 +71,13 @@ textarea {
   padding-top: 14px;
   padding-left: 10px;
   box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    padding-top: 9px;
+    padding-left: 19px;
+  }
 }
 
 
