--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -25,6 +25,16 @@
   top: 30px;
   left: 0px;
   z-index: 5;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    max-width: 595px;
+    padding-right: 41px;
+    padding-left: 41px;
+    top: 77px;
+    left: 27px;
+  }
 }
 .owner::before {
   content: "";
@@ -34,6 +44,10 @@
   width: 100%;
   height: 3px;
   background-color: @bg-green;
+
+  @media (min-width: @tablet-width) {
+    top: 100px;
+  }
 }
 
 .owner__container {
@@ -69,6 +83,13 @@
   margin-right: 10px;
   outline: 1px solid tomato;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    margin-right: 18px;
+    margin-left: 3px;
+  }
 }
 .owner__container input {
   font-size: 16px;
@@ -80,6 +101,32 @@
   margin-bottom: 13px;
   flex-grow: 1;
   padding-left: 15px;
+
+  @media (min-width: @tablet-width) {
+    min-width: 440px;
+    height: 49px;
+    margin-bottom: 15px;
+    padding-left: 20px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+.owner__email::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 248px;
+  width: 17px;
+  height: 13px;
+  background-image: url("../img/icon-mail.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  @media (min-width: @tablet-width) {
+    top: 8px;
+    left: 594px;
+  }
 }
 .owner__tel::before {
   content: "";
@@ -91,15 +138,9 @@
   background-image: url("../img/icon-phone.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-}
-.owner__email::before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 248px;
-  width: 17px;
-  height: 13px;
-  background-image: url("../img/icon-mail.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
+
+  @media (min-width: @tablet-width) {
+    top: 9px;
+    left: 594px;
+  }
 }
