--- a/source/less/cat.less
+++ b/source/less/cat.less
@@ -55,6 +55,9 @@
     font-size: 20px;
     line-height: 20px;
   }
+  @media (min-width: @desktop-width) {
+    min-width: 432px;
+  }
 }
 .cat__wrapper label {
   font-size: 16px;
@@ -70,6 +73,11 @@
     font-size: 20px;
     line-height: 20px;
     margin-bottom: 35px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-top: 10px;
+    margin-bottom: 37px;
+    margin-left: 0px;
   }
 }
 
