--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -5,7 +5,11 @@
   position: relative;
 
   @media (min-width: @tablet-width) {
-  height: 335px;
+    height: 335px;
+  }
+  @media (min-width: @desktop-width) {
+    padding: 0;
+    min-height: 350px;
   }
 }
 .comment__legend {
@@ -31,6 +35,11 @@
     padding-left: 41px;
     top: 64px;
     left: 27px;
+  }
+  @media (min-width: @desktop-width) {
+    padding-left: 0px;
+    top: 64px;
+    left: -2px;
   }
 }
 .comment::before {
@@ -59,6 +68,7 @@
   }
   @media (min-width: @desktop-width) {
     width: 1220px;
+    margin-top: 180px;
   }
 }
 textarea {
@@ -77,6 +87,11 @@ textarea {
     line-height: 30px;
     padding-top: 9px;
     padding-left: 19px;
+  }
+  @media (min-width: @desktop-width) {
+    padding-top: 5px;
+    padding-left: 17px;
+
   }
 }
 
