начинаем ретинизацию и дошли до Arial

--- a/source/less/description.less
+++ b/source/less/description.less
@@ -133,9 +133,11 @@
   vertical-align: top;
 
   text-align: center;
-  padding: 11px 73px;
-  margin: 0 auto;
-  margin-top: 303px;
+  padding: 9px 73px 11px 73px;
+  box-sizing: border-box;
+  margin-left: 20px;
+  margin-top: 290px;
+  color: #ffffff;
 
   @media (min-width: @tablet-width) {
     margin: 0;
