--- a/source/less/example.less
+++ b/source/less/example.less
@@ -13,7 +13,6 @@
   @media (min-width: @desktop-width) {
     min-height: 665px;
     padding: 59px 0;
-
   }
 }
 .example__wrapper {
@@ -56,9 +55,10 @@
   padding: 0;
   font-size: 14px;
   line-height: 18px;
-  margin-top: 23px;
-  margin-right: 30px;
-  outline: 1px solid red;
+  font-family: "Arial";
+  margin-top: 25px;
+  margin-right: 12px;
+  outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
@@ -85,7 +85,7 @@
 
 .example__indicators {
   position: relative;
-  outline: 1px solid red;
+  outline: 1px solid green;
   display: flex;
   justify-content: space-between;
 
@@ -100,7 +100,7 @@
 .example__indicators p {
   margin: 0;
   padding: 0;
-  margin-top: 29px;
+  margin-top: 27px;
 }
 .example__indicators b {
   font-size: 24px;
@@ -125,14 +125,17 @@
   }
 }
 .example__indicators small {
-  font-size: 17px; /* измененный шрифт, должно быть 12*/
+  font-size: 12px;
   line-height: 12px;
+  font-family: "Arial";
   text-transform: lowercase;
   display: block;
   width: 87px;
   min-height: 30px;
-  margin-top: -10px;
+  margin-top: -8px;
   margin-left: 18px;
+  padding-left: 13px;
+  box-sizing: border-box;
   text-align: center;
   z-index: 5;
   background-color: #ffffff;
