--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -48,6 +48,7 @@
 .how-work__describe {
   font-size: 14px;
   line-height: 18px;
+  font-family: "Arial";
 
   position: relative;
 
@@ -87,6 +88,7 @@
   margin-right: 0px;
   }
 }
+
 
 .how-work__describe--foliage::after {
   content: "";
