--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -30,29 +30,23 @@
   outline: 1px solid red;
   position: relative;
 }
-.page-header__logo::before {
-  content: "";
+.page-header__logo-image {
   position: absolute;
   top: 13px;
   left: 21px;
   width: 190px;
   height: 38px;
-  background-image: url("../img/logo-mobile.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
 
   @media (min-width: @tablet-width) {
-    background-image: url("../img/logo-tablet.svg");
-    top: 24px;
-    left: 2px;
     width: 173px;
     height: 58px;
+    top: 25px;
+    left: 0;
   }
   @media (min-width: @desktop-width) {
-    background-image: url("../img/logo-desktop.svg");
-    transform: scale(1.15);
-    top: 58px;
-    left: 15px;
+    width: 202px;
+    height: 60px;
+    top: 52px;
   }
 }
 
