--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -89,6 +89,12 @@
   }
 }
 
+@media (max-width: @mobile-width-only) {
+  .how-work__describe--scales br {
+    display: none;
+  }
+}
+
 
 .how-work__describe--foliage::after {
   content: "";
