--- a/source/less/product.less
+++ b/source/less/product.less
@@ -7,21 +7,20 @@
 }
 @media (min-width: @tablet-width) {
   .product {
-  width: 323px;
-  height: 429px;
-  outline: 1px solid black;
-  margin-bottom: 142px;
-  position: relative;
+    width: 323px;
+    height: 429px;
+    margin-bottom: 142px;
+    position: relative;
   }
   .product:nth-child(7) {
-  margin-bottom: 0;
+    margin-bottom: 0;
   }
 }
 @media (min-width: @desktop-width) {
   .product {
-  width: 245px;
-  height: 430px;
-  margin-bottom: 143px;
+    width: 245px;
+    height: 430px;
+    margin-bottom: 143px;
   }
   .product:nth-child(n + 5) {
   margin-bottom: 0;
@@ -112,7 +111,7 @@
 .product h3 {
   margin: 0;
   padding: 0;
-  margin-top: 18px;
+  margin-top: 22px;
   margin-left: 140px;
   text-transform: uppercase;
   font-weight: 400;
@@ -120,7 +119,7 @@
   line-height: 20px;
   max-width: 80px;
   color: green;
-  outline: 1px solid red;
+  outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -137,13 +136,17 @@
 }
 .product__table {
   font-size: 12px;
-  font-family: 16px;
+  line-height: 16px;
+  font-family: "Arial";
+  font-weight: bold;
   margin: 0;
   padding: 0;
+  margin-top: 9px;
   margin-bottom: 13px;
   margin-left: 140px;
 
   outline: 1px solid red;
+  color: blue;
 
   @media (min-width: @tablet-width) {
     margin-top: 27px;
@@ -153,6 +156,12 @@
     font-size: 16px;
     font-family: 16px;
   }
+}
+.product__table td {
+  outline: 1px solid red;
+}
+.product__table .product__field {
+  text-align: right;
 }
 .product__link {
   display: block;
