--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -64,9 +64,9 @@
     line-height: 24px;
 
     margin-top: 45px;
-    margin-bottom: 45px;
+    margin-bottom: 44px;
     margin-left: 0px;
-    margin-right: 137px;
+    margin-right: 139px;
     padding-top: 110px;
     box-sizing: border-box;
   }
@@ -110,6 +110,11 @@
   z-index: 10;
   outline: 1px solid red;
 
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-leaf@2x.png");
+    background-size: 50px auto;
+  }
+
   @media (min-width: @tablet-width) {
     top: 0;
     left: 0;
@@ -131,6 +136,11 @@
   background-color: @bg-green;
   z-index: 10;
   outline: 1px solid red;
+
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-powder@2x.png");
+    background-size: 50px auto;
+  }
 
   @media (min-width: @tablet-width) {
     top: 0;
@@ -154,6 +164,11 @@
   z-index: 10;
   outline: 1px solid red;
 
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-dining@2x.png");
+    background-size: 50px auto;
+  }
+
   @media (min-width: @tablet-width) {
     top: 0;
     left: 0;
@@ -175,6 +190,11 @@
   background-color: @bg-green;
   z-index: 10;
   outline: 1px solid red;
+
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-clock@2x.png");
+    background-size: 50px auto;
+  }
 
   @media (min-width: @tablet-width) {
     top: 0;
