--- a/source/less/product-add.less
+++ b/source/less/product-add.less
@@ -26,7 +26,7 @@
   padding: 0;
   margin-top: 14px;
   margin-left: 2px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   font-size: 16px;
   line-height: 16px;
   font-weight: 400;
@@ -48,9 +48,12 @@
 .product-add__table {
   font-size: 14px;
   line-height: 14px;
+  font-family: "Arial";
   outline: 1px solid red;
-  margin-bottom: 7px;
+  margin-bottom: 12px;
+  margin-left: -2px;
   vertical-align: middle;
+  display: flex;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
