--- a/source/less/product-show.less
+++ b/source/less/product-show.less
@@ -43,6 +43,7 @@
   padding: 0;
   margin-top: 7px;
   margin-bottom: 22px;
+  font-family: "Arial";
   text-align: center;
   font-size: 12px;
   line-height: 16px;
