--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -1,11 +1,12 @@
 .comment {
-  height: 220px;
+  min-height: 222px;
   border: none;
   outline: 1px solid red;
   position: relative;
+  padding: 0;
 
   @media (min-width: @tablet-width) {
-    height: 335px;
+    min-height: 330px;
   }
   @media (min-width: @desktop-width) {
     padding: 0;
@@ -15,26 +16,24 @@
 .comment__legend {
   font-size: 24px;
   line-height: 24px;
-  position: absolute;
-  max-width: 222px;
+  max-width: 162px;
   padding-right: 21px;
-  padding-left: 20px;
+  padding-left: 17px;
   box-sizing: border-box;
   background-color: #ffffff;
 
   outline: 1px solid red;
-  top: 30px;
-  left: 0px;
-  z-index: 5;
+  margin-top: 15px;
+  margin-left: 0px;
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    max-width: 595px;
+    max-width: 260px;
     padding-right: 41px;
     padding-left: 41px;
-    top: 64px;
-    left: 27px;
+    margin-top: 42px;
+    margin-left: 27px;
   }
   @media (min-width: @desktop-width) {
     padding-left: 0px;
@@ -45,26 +44,27 @@
 .comment::before {
   content: "";
   position: absolute;
-  top: 43px;
+  top: 28px;
   left: 0;
   width: 100%;
   height: 3px;
   background-color: @bg-green;
+  z-index: -5;
 
   @media (min-width: @tablet-width) {
-    top: 86px;
+    top: 64px;
   }
 }
 .comment__container {
   width: 275px;
   height: 147px;
   margin: 0 auto;
-  margin-top: 80px;
+  margin-top: 33px;
 
   @media (min-width: @tablet-width) {
     width: 630px;
-    height: 170px;
-    margin-top: 170px;
+    height: 176px;
+    margin-top: 75px;
   }
   @media (min-width: @desktop-width) {
     width: 1220px;
@@ -79,7 +79,7 @@ textarea {
   font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
   padding-top: 14px;
-  padding-left: 10px;
+  padding-left: 11px;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
