--- a/source/less/cat.less
+++ b/source/less/cat.less
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  outline: 3px solid green;
+  outline: 1px solid red;
   margin-top: 39px;
   margin-bottom: 14px;
 
