--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -1,11 +1,12 @@
 .owner {
-  height: 200px;
+  min-height: 229px;
   border: none;
-  outline: 1px solid red;
+  outline: 1px solid blue;
   position: relative;
+  padding: 0;
 
   @media (min-width: @tablet-width) {
-    height: 300px;
+    min-height: 300px;
   }
   @media (min-width: @desktop-width) {
     height: 235px;
@@ -15,17 +16,16 @@
 .owner__legend {
   font-size: 24px;
   line-height: 24px;
-  position: absolute;
-  max-width: 222px;
+  max-width: 221px;
   padding-right: 21px;
-  padding-left: 20px;
+  padding-left: 18px;
   box-sizing: border-box;
   background-color: #ffffff;
 
   outline: 1px solid red;
-  top: 30px;
-  left: 0px;
-  z-index: 5;
+  margin-top: 30px;
+  margin-left: 0px;
+
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
@@ -33,8 +33,8 @@
     max-width: 595px;
     padding-right: 41px;
     padding-left: 41px;
-    top: 77px;
-    left: 27px;
+    margin-top: 77px;
+    margin-left: 27px;
   }
   @media (min-width: @desktop-width) {
     padding-left: 0px;
@@ -50,6 +50,7 @@
   width: 100%;
   height: 3px;
   background-color: @bg-green;
+  z-index: -5;
 
   @media (min-width: @tablet-width) {
     top: 100px;
@@ -66,16 +67,16 @@
   min-height: 102px;
   outline: 1px solid red;
   margin: 0 auto;
-  margin-top: 106px;
+  margin-top: 33px;
 
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 
   @media (min-width: @tablet-width) {
-    margin-top: 185px;
+    margin-top: 76px;
     width: 634px;
-    height: 124px;
+    min-height: 124px;
   }
   @media (min-width: @desktop-width) {
     margin-top: 179px;
@@ -92,6 +93,7 @@
   margin-right: 10px;
   outline: 1px solid tomato;
   position: relative;
+  align-self: flex-start;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -111,14 +113,14 @@
   text-transform: uppercase;
   height: 41px;
   border: 1px solid red;
-  margin-bottom: 13px;
+  margin-bottom: 14px;
   flex-grow: 1;
   padding-left: 15px;
 
   @media (min-width: @tablet-width) {
     min-width: 440px;
     height: 49px;
-    margin-bottom: 15px;
+    margin-bottom: 21px;
     padding-left: 20px;
     font-size: 20px;
     line-height: 20px;
