--- a/source/less/product.less
+++ b/source/less/product.less
@@ -31,79 +31,72 @@
   position: absolute;
   top: 0;
   left: 0;
+
+  @media (min-width: @tablet-width) {
+    width: 324px;
+  }
+  @media (min-width: @desktop-width) {
+    width: 245px;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .product__image--pro-chicken500 {
     top: -47px;
-    width: 324px;
     height: 172px;
   }
 
   .product__image--pro-chicken1000 {
     top: -82px;
-    width: 324px;
     height: 208px;
   }
 
   .product__image--pro-fish500 {
     top: -47px;
-    width: 324px;
     height: 174px;
   }
 
   .product__image--pro-fish1000 {
     top: -82px;
-    width: 324px;
     height: 208px;
   }
 
   .product__image--slim-buckwheat500 {
     top: -44px;
-    width: 324px;
     height: 174px;
   }
 
   .product__image--slim-buckwheat1000 {
     top: -80px;
-    width: 324px;
     height: 208px;
   }
 
   .product__image--slim-rice500 {
     top: -43px;
-    width: 324px;
     height: 174px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .product__image--pro-chicken500 {
-    width: 245px;
     height: 172px;
   }
   .product__image--pro-chicken1000 {
-    width: 245px;
     height: 208px;
   }
   .product__image--pro-fish500 {
-    width: 245px;
     height: 174px;
   }
   .product__image--pro-fish1000 {
-    width: 245px;
     height: 208px;
   }
   .product__image--slim-buckwheat500 {
-    width: 245px;
     height: 174px;
   }
   .product__image--slim-buckwheat1000 {
-    width: 245px;
     height: 208px;
   }
   .product__image--slim-rice500 {
-    width: 245px;
     height: 174px;
   }
 }
