--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -37,8 +37,9 @@
   }
   @media (min-width: @desktop-width) {
     padding-left: 0px;
-    top: 64px;
-    left: -2px;
+    margin-top: 66px;
+    margin-left: -2px;
+    max-width: 218px;
   }
 }
 .comment::before {
@@ -54,6 +55,9 @@
   @media (min-width: @tablet-width) {
     top: 64px;
   }
+  @media (min-width: @desktop-width) {
+    top: 88px;
+  }
 }
 .comment__container {
   width: 275px;
@@ -68,7 +72,7 @@
   }
   @media (min-width: @desktop-width) {
     width: 1220px;
-    margin-top: 180px;
+    margin-top: 79px;
   }
 }
 textarea {
