--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -141,7 +141,20 @@
   }
 }
 
-.owner__email::before {
+.owner__email-icon {
+  position: absolute;
+  top: 5px;
+  left: 248px;
+  width: 17px;
+  height: 13px;
+  fill: green;
+}
+.owner__email-input:hover .owner__email svg {
+  fill: green;
+}
+
+
+/* .owner__email::before {
   content: "";
   position: absolute;
   top: 5px;
@@ -161,6 +174,8 @@
     left: 526px;
   }
 }
+
+*/
 .owner__tel::before {
   content: "";
   position: absolute;
