--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -6,9 +6,11 @@
   margin: 0 auto;
   outline: 1px solid black;
   padding: 17px 0 0 0;
+  background-color: lightblue;
 
   @media (min-width: @tablet-width) {
     width: 710px;
+
   }
 
   @media (min-width: @desktop-width) {
