оптимизировали векторную и растровую графику

--- a/source/less/additional.less
+++ b/source/less/additional.less
@@ -106,16 +106,13 @@
   }
 }
 
-.additional__gift::before {
-  content: "";
+.additional__gift-svg {
   position: absolute;
   top: 66px;
   left: 113px;
   width: 56px;
   height: 60px;
-  background-image: url("../img/icon-gift.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
+  fill: #ffffff;
 
   @media (min-width: @tablet-width) {
     top: 65px;
