--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -148,22 +148,6 @@
   width: 17px;
   height: 13px;
   fill: green;
-}
-.owner__email-input:hover .owner__email svg {
-  fill: green;
-}
-
-
-/* .owner__email::before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 248px;
-  width: 17px;
-  height: 13px;
-  background-image: url("../img/icon-mail.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
 
   @media (min-width: @tablet-width) {
     top: 8px;
@@ -175,17 +159,13 @@
   }
 }
 
-*/
-.owner__tel::before {
-  content: "";
+.owner__phone-icon {
   position: absolute;
   top: 3px;
   left: 248px;
   width: 20px;
   height: 20px;
-  background-image: url("../img/icon-phone.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
+  fill: blue;
 
   @media (min-width: @tablet-width) {
     top: 9px;
