--- a/source/less/product-add.less
+++ b/source/less/product-add.less
@@ -21,6 +21,7 @@
     box-sizing: border-box;
   }
 }
+
 .product-add h3 {
   margin: 0;
   padding: 0;
@@ -66,6 +67,7 @@
     width: 100%;
     font-size: 16px;
     line-height: 20px;
+    font-weight: bold;
   }
   @media (min-width: @desktop-width) {
     width: 245px;
