--- a/source/less/product-show.less
+++ b/source/less/product-show.less
@@ -3,6 +3,7 @@
   outline: 1px solid red;
   padding: 80px 0 25px 0;
   box-sizing: border-box;
+  position: relative;
 }
 @media (min-width: @tablet-width) {
   .product-show {
@@ -16,6 +17,33 @@
   width: 245px;
   height: 430px;
   }
+}
+.product-show__icon-plus-mobile {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 26px;
+  left: 125px;
+  opacity: 0.4;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+.product-show__icon-plus {
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: 54px;
+  left: 131px;
+
+  @media (min-width: @desktop-width) {
+    left: 94px;
+  }
+
 }
 .product-show b {
   display: block;
