--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -1,10 +1,13 @@
 .how-work {
   outline: 1px solid black;
+  width: 320px;
   min-height: 447px;
-  padding: 17px 20px;
+  margin: 0 auto;
+  padding: 17px 20px 0 20px;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
+    width: 768px;
     min-height: 780px;
     padding: 43px 30px 13px 30px;
   }
