--- a/source/less/description.less
+++ b/source/less/description.less
@@ -1,11 +1,11 @@
 .description {
-  min-height: 500px;
+  opacity: 0.5;
   position: relative;
   margin: 0 auto;
 
   content: "";
   width: 320px;
-  height: 305px;
+  min-height: 500px;
 
   background-image: url("../img/index-background-mobile@1x.jpg");
   background-repeat: no-repeat;
@@ -20,12 +20,12 @@
   @media (min-width: @tablet-width) {
     background-image: none;
     width: 710px;
-    height: 840px;
+    min-height: 840px;
   }
 
   @media (min-width: @desktop-width) {
     width: 100%;
-    height: 650px;
+    min-height: 650px;
     position: relative;
   }
 }
@@ -156,6 +156,7 @@
   margin-left: 20px;
   margin-top: 290px;
   background-color: @bg-green;
+
   color: #ffffff;
 
   @media (min-width: @tablet-width) {
