--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,6 +1,6 @@
 .page-footer {
   outline: 1px solid red;
-  width: 320px;
+  width: 100%;
   margin: 0 auto;
   opacity: 1;
   padding: 28px 0;
@@ -88,8 +88,8 @@
 
 .page-footer__map {
   display: block;
-  margin-bottom: 36px;
   outline: 1px solid black;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     width: 767px;
@@ -116,6 +116,8 @@
   display: flex;
   flex-direction: column;
   outline: 2px solid green;
+  background-color: #f2f2f2;
+  padding-top: 36px;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
