--- a/source/less/page-main.less
+++ b/source/less/page-main.less
@@ -1,17 +1,6 @@
 .page-main {
-  opacity: 0.5;
   display: flex;
   flex-direction: column;
-  width: 320px;
+  width: 100%;
   margin: 0 auto;
-}
-@media (min-width: @tablet-width) {
-  .page-main {
-  width: 768px;
-  }
-}
-@media (min-width: @desktop-width) {
-  .page-main {
-  min-width: 1220px;
-  }
 }
