--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -5,7 +5,13 @@
   text-transform: uppercase;
   margin: 0;
   position: relative;
-  outline: 3px solid orange;
+  outline: 1px solid orange;
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    right: 0;
+    z-index: 10;
+  }
 }
 .main-nav__toggle {
   position: absolute;
