--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -7,19 +7,17 @@
   min-width: 320px;
   margin: 0 auto;
   outline: 1px solid red;
-}
-@media (min-width: @tablet-width) {
-  .page-header {
+
+  @media (min-width: @tablet-width) {
     width: 710px;
     min-height: 110px;
     flex-direction: row;
     justify-content: space-between;
   }
-}
-@media (min-width: @desktop-width) {
-  .page-header {
-  width: 1220px;
-  min-height: 125px;
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    min-height: 125px;
+    position: relative;
   }
 }
 .page-header__logo {
