--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -1,7 +1,17 @@
 .slider__slide1 {
   outline: 1px solid red;
-  transform: scale(1.15);
-  margin-top: 50px;
+  margin: 0 auto;
+  margin-top: 35px;
+  width: 320px;
+  height: 240px;
+
+
+  @media (min-width: @tablet-width) {
+    align-self: center;
+    margin-top: -168px;
+    width: 690px;
+    height: 517px;
+  }
 }
 .slider__toggle {
   font-size: 16px;
