--- a/source/less/social.less
+++ b/source/less/social.less
@@ -14,6 +14,7 @@
     outline: 1px solid red;
     width: 140px;
     height: 28px;
+    margin-top: -2px;
   }
 }
 .social__link--vkontakte::before {
