--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,16 +1,18 @@
 @font-face {
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
   font-family: "Oswald";
-  src: url("../fonts/oswaldregular.woff") format("woff"),
-  url("../fonts/oswaldregular.woff2") format("woff2");
+  src: url("../fonts/oswaldregular.woff2") format("woff2"),
+  url("../fonts/oswaldregular.woff") format("woff");
   }
 @font-face {
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
   font-family: "Oswald";
-  src: url("../fonts/oswaldmedium.woff") format("woff"),
-  url("../fonts/oswaldmedium.woff2") format("woff2");
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"),
+  url("../fonts/oswaldmedium.woff") format("woff");
 }
 
 @import "page-header.less";
