--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -48,4 +48,11 @@
   }
 }
 
+.page-header__logo-image:hover {
+  opacity: 0.7;
+}
 
+.page-header__logo-image:focus,
+.page-header__logo-image:active {
+  opacity: 0.4;
+}
